# banano-uav

./: .dockerignore  .gitattributes  .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Dockerfile  MANIFEST.in  README.md  SECURITY.md  config.example.yaml  pyproject.toml  requirements-deep.txt  requirements.txt
.github/workflows/: ci.yml
banano/: __init__.py  centers.py  cli.py  config.py  errors.py  geo.py  grid.py  indices.py  logconf.py  mats.py  metrics.py  model.py  ortho.py  pipeline.py  radial.py  report.py  segment.py  synth.py  visualize.py
deep/: banana.yaml  benchmark.py  eval_real.py  infer_yolo.py  make_synth_dataset.py  prepare_dataset.py  prepare_real_dataset.py  train_yolo.py
docs/: api.md  estado-del-arte.md  guia-campo.md  modelo-real.md
examples/: quickstart.py
scripts/: demo.py  make_example.py  run.py
tests/: test_cli.py  test_config.py  test_geo.py  test_model.py  test_ortho.py  test_pipeline.py  test_units.py  test_visualize.py
