[build-system]
requires = ["setuptools>=77.0.3"]  # PEP 639 (license expression SPDX + license-files)
build-backend = "setuptools.build_meta"

[project]
name = "banano-drone"
version = "1.0.0"
description = "Identificacion y conteo de cultivo de banano en ortomosaicos de dron (libre, AGPL-3.0)"
readme = "README.md"
requires-python = ">=3.10"
license = "AGPL-3.0-or-later"
license-files = ["LICENSE"]
authors = [{ name = "jhona" }]
keywords = ["banana", "banano", "drone", "uav", "remote-sensing", "agriculture", "precision-agriculture", "orthomosaic"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "scikit-image>=0.21",
    "scikit-learn>=1.3",
    "matplotlib>=3.7",
    "imageio>=2.31",
]

[project.optional-dependencies]
geo = ["rasterio>=1.3"]
gis = ["geopandas>=0.14"]
deep = ["ultralytics>=8.1"]
dev = ["pytest>=7.0"]

[project.urls]
Homepage = "https://github.com/jhona/banano-drone"
Issues = "https://github.com/jhona/banano-drone/issues"

[project.scripts]
banano-detect = "banano.cli:main"

[tool.setuptools.packages.find]
include = ["banano*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
