[build-system]
requires = ["setuptools>=77.0.3"]  # PEP 639 (license expression SPDX + license-files)
build-backend = "setuptools.build_meta"

[project]
name = "banano-drone"
version = "2.0.0"
description = "Identificacion y conteo de cultivo de banano en ortomosaicos de dron (libre, AGPL-3.0)"
readme = "README.md"
requires-python = ">=3.10"
license = "AGPL-3.0-or-later"
license-files = ["LICENSE"]
authors = [{ name = "EazyHood" }]
keywords = ["banana", "banano", "drone", "uav", "remote-sensing", "agriculture", "precision-agriculture", "orthomosaic"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "scikit-image>=0.21",
    "scikit-learn>=1.3",
    "matplotlib>=3.7",
    "imageio>=2.31",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
geo = ["rasterio>=1.3"]
gis = ["geopandas>=0.14"]
deep = ["ultralytics>=8.1"]
dev = ["pytest>=7.0", "pytest-cov>=4.0", "ruff>=0.6", "mypy>=1.8", "types-PyYAML"]

[project.urls]
Homepage = "https://github.com/EazyHood/banano-uav"
Issues = "https://github.com/EazyHood/banano-uav/issues"

[project.scripts]
banano-detect = "banano.cli:main"

[tool.setuptools.packages.find]
include = ["banano*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501", "B905", "SIM108"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E402"]
"scripts/*" = ["E402"]
"deep/*" = ["E402"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
warn_unused_ignores = false
no_implicit_optional = true
check_untyped_defs = false
exclude = ["deep/", "scripts/", "tests/"]
